# rafi-emu

./: .gitignore  .gitmodules  .travis.yml  BuildForDebugOnWindows.sh  BuildGoogleTestOnWindows.sh  CMakeLists.txt  README.md  Windows.cppcheck
.github/actions/: run-unit-test.yml
.github/actions/build-and-run-unit-test/: Dockerfile
.github/workflows/: run-test.yml  run-unit-test.yml
Sources/: CheckIo.cpp  CompareTrace.cpp  CycleComparator.cpp  CycleComparator.h  DumpPc.cpp  PrintTrace.cpp  RafiEmu.cpp  TraceDumper.cpp  TraceDumper.h
Sources/Common/: BitField.h  Event.h  Exception.h  RvTypes.cpp  RvTypes.h
Sources/OldTrace/: TraceBinary.h  TraceBinaryComparator.cpp  TraceBinaryComparator.h  TraceBinaryReader.h  TraceBinaryUtil.cpp  TraceBinaryUtil.h  TraceBinaryWriter.cpp
Sources/Profiler/: Profiler.cpp  Profiler.h
Sources/System/: System.h
Sources/System/Memory/: Memory.cpp
Sources/System/Processor/: ControlStatusRegister.cpp  ControlStatusRegister.h  Op.cpp  Processor.cpp  Processor.h  ProcessorException.h  RegisterFile.cpp
Sources/System/Uart/: Uart.cpp
Sources/Trace/: FileTraceReader.cpp  FileTraceWriter.cpp  FileTraceWriter.h  ITraceReader.h  ITraceWriter.h  MemoryTraceReader.cpp  MemoryTraceReader.h  MemoryTraceWriter.cpp  MemoryTraceWriter.h  TraceBinaryComparator.cpp  TraceBinaryReader.cpp  TraceBinaryReader.h  TraceBinaryWriter.h  TraceCycle.h  TraceCycleBuilder.cpp  TraceCycleBuilder.h  TraceCycleCommon.h  TraceCycleException.h  TraceCycleNode.h  TraceCycleReader.cpp  TraceCycleReader.h  TraceCycleUtil.h  TraceException.h
Tests/: SampleTest.cpp
Tests/Trace/: test_TraceCycle.cpp  test_TraceReader.cpp  test_TraceUtil.cpp  test_TraceUtil.h  test_TraceWriter.cpp
docker/: Dockerfile
fw/: link.ld  rom.S
include/rafi/: common.h  emu.h  fp.h  trace.h
include/rafi/common/: BitField.h  Decoder.h  Exception.h  Macro.h  OpApi.h  OpTypes.h  RvApi.h  RvCsr.h  RvPageTable.h  RvTypes.h  Util.h
include/rafi/emu/: BasicTypes.h  Event.h  Exception.h  Macro.h  MemoryMap.h  Util.h
include/rafi/fp/: FpApi.h  ScopedFpRound.h
include/rafi/trace/: BinaryCycleLogger.h  Cycle.h  CycleBuilder.h  CycleConfig.h  CyclePrinter.h  CycleReader.h  CycleTypes.h  CycleView.h  Exception.h  FileTraceReader.h  FileTraceWriter.h  GdbTraceReader.h  ICycle.h  ITracePrinter.h  ITraceReader.h  ITraceWriter.h  MemoryTraceReader.h  MemoryTraceWriter.h  TextTraceReader.h  TraceBinaryMemoryReader.h  TraceBinaryMemoryWriter.h  TraceBinaryReader.h  TraceBinaryWriter.h  TraceCycleBuilder.h  TraceCycleConfig.h  TraceCycleReader.h  TraceCycleTypes.h  TraceIndexReader.h  TraceIndexWriter.h  TraceJsonPrinter.h  TracePcPrinter.h  TraceTextPrinter.h  TraceTextReader.h
include/rvtrace/: common.h  reader.h  writer.h
include/rvtrace/common/: Decoder.h  Exception.h  Op.h  OpApi.h  OpTypes.h  RvApi.h  RvTypes.h  TraceCycleConfig.h  TraceCycleTypes.h
include/rvtrace/reader/: FileTraceReader.h  ITraceReader.h  MemoryTraceReader.h  TraceCycleReader.h
include/rvtrace/writer/: FileTraceWriter.h  ITraceWriter.h  MemoryTraceWriter.h  (+1 more)
script/: build_debug.sh  build_gtest.sh  build_release.sh  checkout_prebuilt_binary.sh  checkout_prebuilt_binary_for_ci.sh  common.sh.inc  download_docker_container.sh  dump_qemu.gdb  dump_qemu.sh  dump_qemu_full.gdb  dump_qemu_full.sh  echo_cmd_for_docker.sh  prepare_binary.sh  prepare_docker.sh  prepare_linux.sh  prepare_riscv_tests.sh  prepare_zephyr.sh  qemu-trace-events  run_docker.sh  run_linux.sh  run_riscv_tests.sh  run_unit_test.sh  run_zephyr_philosophers.sh
share/script/: copy_vmlinux.sh  run_objcopy.sh
src/librafi_common/: Decoder.cpp  DecoderImpl.cpp  DecoderImpl.h  OpApi.cpp  RvApi.cpp
src/librafi_fp/: FpApi.cpp  ScopedFpRound.cpp
src/librafi_trace/: BinaryCycle.cpp  BinaryCycle.h  BinaryCycleLogger.cpp  BinaryCycleLoggerImpl.cpp  BinaryCycleLoggerImpl.h  Cycle.cpp  CycleBuilder.cpp  CycleBuilderImpl.cpp  CycleBuilderImpl.h  CyclePrinter.cpp  CyclePrinterImpl.cpp  CyclePrinterImpl.h  CycleReader.cpp  CycleReaderImpl.cpp  CycleReaderImpl.h  CycleView.cpp  CycleViewImpl.cpp  CycleViewImpl.h  FileTraceReader.cpp  FileTraceReaderImpl.cpp  FileTraceReaderImpl.h  FileTraceWriter.cpp  FileTraceWriterImpl.cpp  FileTraceWriterImpl.h  GdbCycle.cpp  GdbCycle.h  GdbTrace.cpp  GdbTrace.h  GdbTraceReader.cpp  MemoryTraceReader.cpp  MemoryTraceReaderImpl.cpp  MemoryTraceReaderImpl.h  MemoryTraceWriter.cpp  MemoryTraceWriterImpl.cpp  MemoryTraceWriterImpl.h  TextCycle.cpp  TextCycle.h  TextTrace.cpp  TextTrace.h  TextTraceReader.cpp  (+34 more)
src/librvtrace/: FileTraceReader.cpp  FileTraceWriter.cpp  MemoryTraceReader.cpp  MemoryTraceWriter.cpp  RvTypes.cpp  TraceCycleBuilder.cpp  TraceCycleReader.cpp
src/rafi-check-io/: Main.cpp
src/rafi-conv/: Main.cpp
src/rafi-diff/: CommandLineOption.cpp  CommandLineOption.h  CycleComparator.cpp  CycleComparator.h  Main.cpp
src/rafi-dump/: CommandLineOption.cpp  CommandLineOption.h  CycleFilter.cpp  CycleFilter.h  DumpConfig.h  Main.cpp  PrinterGdb.cpp  PrinterGdb.h  TraceTextPrinter.cpp  TraceTextPrinter.h
src/rafi-dump-pc/: Main.cpp
src/rafi-emu/: CommandLineOption.cpp  CommandLineOption.h  Emulator.cpp  Emulator.h  GdbCommand.cpp  GdbCommand.h  GdbServer.cpp  GdbServer.h  IEmulator.h  ISystem.h  Main.cpp  MemoryMap.h  PcLogger.cpp  PcLogger.h  Profiler.cpp  Profiler.h  Socket.cpp  Socket.h  System.cpp  System.h  TraceDumper.cpp  TraceDumper.h  TraceLogger.cpp  TraceLogger.h  TraceLoggerConfig.h  TraceTextLogger.cpp  TraceTextLogger.h
src/rafi-unit-test/: GdbTest.cpp  OpGetStringTest.cpp  StubEmulator.cpp  StubEmulator.h  StubSystem.cpp  StubSystem.h  TextTraceTest.cpp
src/util/: TraceUtil.cpp  TraceUtil.h
test/: riscv_benchmarks.config.json  riscv_tests.config.json  zephyr.config.json
test/test-op/: test_OpGetString.cpp
test/test-trace/: test_TextTrace.cpp  test_TraceCycle.cpp  test_TraceReader.cpp  test_TraceUtil.cpp  test_TraceUtil.h  test_TraceWriter.cpp
tool/: check_copyright.py  prepare_linux.py  prepare_riscv_tests.py  prepare_zephyr.py  run_linux.py  run_riscv_tests.py  run_zephyr.py
(+172 files in other folders)
